# MoonBeam

./: .gitignore  AGENTS.md  README.md
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/m151/moonbeam/: MainActivity.kt
android/app/src/main/java/com/m151/moonbeam/decode/: VideoDecoder.kt
android/app/src/main/java/com/m151/moonbeam/input/: TouchHandler.kt
android/app/src/main/java/com/m151/moonbeam/net/: WsClient.kt
android/app/src/main/java/com/m151/moonbeam/settings/: AppSettings.kt  SettingsRepository.kt
android/app/src/main/java/com/m151/moonbeam/ui/puck/: Puck.kt  PuckState.kt
android/app/src/main/java/com/m151/moonbeam/ui/radial/: RadialItem.kt  RadialMenu.kt  RadialState.kt
android/app/src/main/java/com/m151/moonbeam/ui/theme/: MoonBeamColors.kt  MoonBeamTheme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/protocol/: build.gradle.kts
android/protocol/src/main/kotlin/com/m151/moonbeam/protocol/: InputMsg.kt  Wire.kt
android/protocol/src/test/kotlin/com/m151/moonbeam/protocol/: WireTest.kt
browser/: index.html  input.html
docs/: ARCHITECTURE.md  M0-RESULTS.md  M1-ENCODE-PROBE.md  M1-PORTAL-PROBE.md  M1-TRANSPORT-PROBE.md  M1-WRITEBACK-PROBE.md  M2-INPUT-WS-PROBE.md  M2-MUX-PROBE.md  M2-UINPUT-PEN-PROBE.md  M2-UINPUT-TOUCH-PROBE.md  M3-ANDROID-SCAFFOLD.md  M3-INPUT-FORWARDING.md  M3-LATENCY.md  M3-VIDEO-DECODE.md  M4-ANDROID-UX.md  MOONBEAM-APP-PLAN.md  ROADMAP.md
host/: Cargo.toml
host/src/: config.rs  error.rs  main.rs
host/src/capture/: mod.rs
host/src/display/: mod.rs
host/src/encode/: mod.rs
host/src/input/: mod.rs
host/src/proto/: mod.rs
host/src/transport/: mod.rs
scripts/: load-vkms.sh  m0-cleanup.sh  m0-verify-120hz.sh
