[package]
name = "moonbeamd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MoonBeam host daemon: virtual display, capture, NVENC encode, WebSocket transport, uinput input return"
repository = "https://github.com/mateim4/MoonBeam"
publish = false

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
drm = "0.14"
pipewire = "0.9"
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }

# The following crates are pinned in the design (docs/ARCHITECTURE.md, plan)
# and will be added here as their corresponding modules gain real implementations:
#   axum 0.7              — HTTP + WebSocket server (transport/)
#   tower-http 0.6        — static-asset serving (transport/)
#   ffmpeg-next 7.1       — NVENC encode (encode/)
#   input-linux 0.7       — uinput pen + multitouch device builders (input/)
#   thiserror 2.0         — typed errors at module boundaries (error.rs)
#   serde, serde_json, toml — config + control protocol (config.rs, proto/)
