[package]
name = "moonbeamd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MoonBeam host daemon: virtual display, capture, NVENC encode, WebSocket transport, uinput input return"
repository = "https://github.com/mateim4/MoonBeam"
publish = false

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
drm = "0.14"
pipewire = "0.9"
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
ffmpeg-next = "8.1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
bytes = "1"
input-linux = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = "0.29"

# The following crates are pinned in the design (docs/ARCHITECTURE.md, plan)
# and will be added here as their corresponding modules gain real implementations:
#   thiserror 2.0  — typed errors at module boundaries (error.rs)
#   toml            — config (config.rs)
